--- a/index2.html
+++ b/index2.html
@@ -54,5 +54,8 @@
       <td>6/10</td>
     </tr>
 </table>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/HEZ4fjS9ijg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<br>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d374.0810327578255!2d-122.15807861795354!3d47.64872630579541!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54906d9bf37944d1%3A0x66363a4e4dfee6e0!2sHenry%20Instrument!5e1!3m2!1sen!2sus!4v1679435202994!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </body>
 </html>
