--- a/RockingWokReDesign/index.html
+++ b/RockingWokReDesign/index.html
@@ -73,9 +73,12 @@
             </button>
         </div>
     </div>
+    <div class="carousel-container2">
+        <h1 style="text-decoration: underline; text-align: center; font-size: 100px; letter-spacing: 5px; text-shadow: 4px 2px #000000;">Rocking Wok</h1>
+    </div>
     <br>
     <div style="z-index:150; position:relative; top: 20px;">
-<h1 style="text-decoration: underline; text-align: center;">Rocking Wok</h1>
+<!!old rckingwk!!>
 </div>
 <br>
 <br>
