--- a/RockingWokReDesign/index.html
+++ b/RockingWokReDesign/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <nav>
-    <div class="navbar">
+    <div class="navbar" style="z-index: 5; position: fixed;">
       <div class="container nav-container">
           <input class="checkbox" type="checkbox" name="" id="" />
           <div class="hamburger-lines">
@@ -35,7 +35,7 @@
  
 <body>
      
-               <div id="demo" class="carousel slide" data-bs-ride="carousel" style="z-index:-30">
+               <div id="demo" class="carousel slide" style="z-index: 0">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
                 <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
@@ -43,21 +43,27 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="images/dishes1.avif" alt="Dishes" class="d-block w-100">
+                    <div style="height: 100vh; overflow-y: hidden;">
+                        <img src="images/dishes1.avif" alt="Dishes" class="d-block w-100">
+                    </div>
                     <div class="carousel-caption">
                         <h3>Dishes</h3>
                         <p></p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/cakes1.avif" alt="Cakes" class="d-block w-100">
+                    <div style="height: 100vh; overflow-y: hidden;">
+                        <img src="images/cakes1.avif" alt="Cakes" class="d-block w-100">
+                    </div>
                     <div class="carousel-caption">
                         <h3>Cakes</h3>
                         <p></p>
                     </div>
                 </div>
                        <div class="carousel-item">
+                        <div style="height: 100vh; overflow-y: hidden;">
                     <img src="images/hotpot1.avif" alt="Rehearsal" class="d-block w-100">
+                    </div>
                     <div class="carousel-caption">
                         <h3>HotPot</h3>
                         <p></p>
