--- a/Project1/index.html
+++ b/Project1/index.html
@@ -128,11 +128,10 @@
   <br>
   <div class="footer-basic">
     <footer>
-        <div class="social"><a href="https://www.instagram.com/oliver_crosby/"><i class="icon ion-social-instagram"></i></a><a href="https://www.youtube.com/channel/UC4gtrUmaWJ7Rv_7cCaJHY6Q"><i class="icon ion-social-youtube"></i></a></div>
         <ul class="list-inline">
-            <li class="list-inline-item"><a href="#">Home</a></li>
-            <li class="list-inline-item"><a href="#">Music</a></li>
-            <li class="list-inline-item"><a href="">Contact</a></li>
+            <li class="list-inline-item"><a href="https://www.instagram.com/oliver_crosby/">Instagram</a></li>
+            <li class="list-inline-item"><a href="https://www.youtube.com/channel/UC4gtrUmaWJ7Rv_7cCaJHY6Q">YouTube</a></li>
+            <li class="list-inline-item"><a href="contact.html">Contact</a></li>
         </ul>
     </footer>
 </div>
