--- a/nav_include_demo/contact.html
+++ b/nav_include_demo/contact.html
@@ -10,8 +10,8 @@
             font-family: Arial, sans-serif;
 
             margin: 0;
-            padding: 20px;
-color: azure;
+              padding: 20px;
+background-color: azure;
      
         }
 
