--- a/responsive_fender/about.html
+++ b/responsive_fender/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="nav">
-        <div class="logo">
+        <div class="bigname">
             <h1 style="font-size: 80px;">Guitar Shop</h1>
         </div>
         <nav>
@@ -31,7 +31,7 @@
 
                 <h2 style="font-size: 30px; font-weight: bold; padding: 0% 10%;">About Us</h2>
                 <br>
-                
+
                 <p style="padding: 0% 10%;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget lacus sit amet metus sodales mollis. In vel massa sit amet nulla ullamcorper dapibus. Nullam nec ullamcorper turpis. Donec eget urna et turpis tempus ultricies. Duis non nibh magna. Nulla facilisi.</p>
             </div>
         </div>
