--- a/responsive_fender/index2.html
+++ b/responsive_fender/index2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="nav">
-        <div class="logo">
+        <div class="bigname">
             <h1 style="font-size: 80px;">Guitar Shop</h1>
         </div>
         <nav>
@@ -55,7 +55,7 @@
                 <img src="images/jbass.jpg" alt="jag" style="width: 30%; ">
 
                 <p style="margin: 10%;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quis risus ultrices, ornare justo id, efficitur ligula. Vivamus eget nulla sed elit consectetur feugiat nec sed odio.</p>
-                
+
             </div>
 
         </main>
