--- a/responsive_fender/with_hamb/index3.html
+++ b/responsive_fender/with_hamb/index3.html
@@ -2,23 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Olivers Guitar Shop</title>
-    <link rel="stylesheet" href="css/style2.css">
-</head>
-<body>
-    <header class="nav">
-        <div class="bigname">
-            <h1 style="font-size: 80px;">Guitar Shop</h1>
-        </div>
-        <nav>
-            
-            <a style="color: antiquewhite;" href="index2.html">Home</a>
-            <a style="color: antiquewhite;" href="products.html">Products</a>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <section class="top-nav">
+      <div style="font-weight: bold;">
+       Oliver's Guitar Shop
+      </div>
+      <input id="menu-toggle" type="checkbox" />
+      <label class='menu-button-container' for="menu-toggle">
+      <div class='menu-button'></div>
+    </label>
+      <ul class="menu">
+        <li><a href="index3.html">Home</a></li>
+        <li><a href="products2.html">Products</a></li>
+        <li><a href="about2.html">About</a></li>
 
-            <a style="color: antiquewhite;" href="about.html">About Us</a>
-        </nav>
-    </header>
+      </ul>
+    </section>
+  
+   
+    <title>Olivers Guitar Shop</title>
+    <link rel="stylesheet" href="css/style3.css">
+</head>
+
+
+
+
+
+<body>
+    
 
     <div class="container">
 
