--- a/ezells_redesign_with_calendar/index2.html
+++ b/ezells_redesign_with_calendar/index2.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ezell's Chicken | Home</title>
-    <link rel="stylesheet" href="css/style2.css">
+    <link id="theme-link" rel="stylesheet" href="css/style2light.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
-        
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
 </head>
 <body>
     <div class="nav">
@@ -138,11 +136,10 @@
 <br>
 <br>
 
-    <div class="footer">
-        <footer>2024 Ezell's Chicken</footer>
-    </div>
-
-    <script src="js/script.js"></script>
-
+<button class="btn-toggle" style="margin: auto;"> Toggle Dark Calendar and Nav </button>
+<div class="footer">
+    <footer>2024 Ezell's Chicken</footer>
+</div>
+<script src="js/script.js"></script>
 </body>
 </html>
