--- a/final_portfolio/contact.html
+++ b/final_portfolio/contact.html
@@ -45,6 +45,8 @@
 
     <br><br><br>
 
+    <!--parts are from free frontend -->
+
     <div class="contact-us">
         <form action="#">
             <label for="customerName">NAME <em>&#x2a;</em></label>
