--- a/final_portfolio/portfolio.html
+++ b/final_portfolio/portfolio.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style2.css">
 
+    <!--free frontend for stuff related to 'waviy' -->
     <style>
 
 @import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap');
