--- a/final_portfolio/collabs.html
+++ b/final_portfolio/collabs.html
@@ -73,8 +73,8 @@
             <p class="fade-in">If you are interested in collaborating with me, please go to the <a href="contact.html">contact</a> page and send me a message. Thank you! </p>
         </div>
     </div>
-    <div class="footer">
-        <footer>2024 Oliver Crosby</footer>
+    <div class="footer" style="background: #2d3246; width: 99vw; height: 50px;">
+        <footer style="color: white; text-align: center; margin-top: 1%;">Copyright 2024 Oliver Crosby <a href="mailto: ocrosby@eastsideprep.org" style="margin: 0% 10%;">ocrosby@eastsideprep.org</a>      <a href="4255552222">425-222-5555</a></footer>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
