--- a/final_portfolio/current.html
+++ b/final_portfolio/current.html
@@ -90,8 +90,8 @@ iframe {
             <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1742347467&color=%23c09f75&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/oliver-crosby-864388867" title="Oliver Crosby" target="_blank" style="color: #cccccc; text-decoration: none;">Oliver Crosby</a> · <a href="https://soundcloud.com/oliver-crosby-864388867/16-bit" title="16 bit" target="_blank" style="color: #cccccc; text-decoration: none;">16 bit</a></div>
         </div>
     </div>
-    <div class="footer">
-        <footer>2024 Oliver Crosby</footer>
+    <div class="footer" style="background: #2d3246; width: 99vw; height: 50px;">
+        <footer style="color: white; text-align: center; margin-top: 1%;">Copyright 2024 Oliver Crosby <a href="mailto: ocrosby@eastsideprep.org" style="margin: 0% 10%;">ocrosby@eastsideprep.org</a>      <a href="4255552222">425-222-5555</a></footer>
     </div>
     <script src="scripts.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
