--- a/final_portfolio/index2.html
+++ b/final_portfolio/index2.html
@@ -12,7 +12,7 @@
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-
+<!--there is some left behind code in this style section from previous experiments that I left behind because i wanted to have the option to swap back in old designs. Not very clean, but works for what i was doing while working on this project. -->
     <style>
         * {
             box-sizing: border-box;
@@ -391,6 +391,8 @@ ul, ol {
         </div>
     </div>
 
+<!--footer has some elements from free frontend -->
+
     <footer class="section footer-classic context-dark bg-image" style="background: #2d3246; width: 99vw;">
         <div class="container" style="height: 30px;">
           <div class="row row-30">
@@ -429,6 +431,8 @@ ul, ol {
           <div class="col"><a class="social-inner" href="https://www.youtube.com/channel/UC4gtrUmaWJ7Rv_7cCaJHY6Q"><span class="icon mdi mdi-youtube-play"></span><span>Youtube</span></a></div>
         </div>
       </footer>
+
+      <!--carousel is w3 -->
     <script>
        $(document).ready(function() {
    
