--- a/final_portfolio/portfolio.html
+++ b/final_portfolio/portfolio.html
@@ -160,8 +160,8 @@
 </div>
 
 
-<div class="footer">
-    <footer>2024 Oliver Crosby</footer>
+<div class="footer" style="background: #2d3246; width: 99vw; height: 50px;">
+    <footer style="color: white; text-align: center; margin-top: 1%;">Copyright 2024 Oliver Crosby <a href="mailto: ocrosby@eastsideprep.org" style="margin: 0% 10%;">ocrosby@eastsideprep.org</a>      <a href="4255552222">425-222-5555</a></footer>
 </div>
 </body>
 </html>
