--- a/final_portfolio/about.html
+++ b/final_portfolio/about.html
@@ -71,8 +71,8 @@
             <p class="fade-in">He is also one half of the band Cherry Ferrari, a duo who creates songs combining funk, house, jazz, disco, and electronic music. Starting as a band in 2022, Cherry Ferrari has gone on to play shows across Seattle, opening for artists like Macklemore, Thundercat, and Lil Yachty. This summer they will be embarking on their first tour, playing shows in New York, Chicago, and Los Angeles.</p>
         </div>
     </div>
-    <div class="footer">
-        <footer>2024 Oliver Crosby</footer>
+    <div class="footer" style="background: #2d3246; width: 99vw; height: 50px;">
+        <footer style="color: white; text-align: center; margin-top: 1%;">Copyright 2024 Oliver Crosby <a href="mailto: ocrosby@eastsideprep.org" style="margin: 0% 10%;">ocrosby@eastsideprep.org</a>      <a href="4255552222">425-222-5555</a></footer>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
