--- a/final_portfolio/contact.html
+++ b/final_portfolio/contact.html
@@ -79,8 +79,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
 <div class="footer">
-    <footer>2024 Oliver Crosby</footer>
+    <div class="footer" style="background: #2d3246; width: 99vw; height: 50px;">
+        <footer style="color: white; text-align: center; margin-top: 10%;">Copyright 2024 Oliver Crosby <a href="mailto: ocrosby@eastsideprep.org" style="margin: 0% 10%;">ocrosby@eastsideprep.org</a>      <a href="4255552222">425-222-5555</a></footer>
+    </div>
 </div>
 </body>
 </html>
